Actualizando backend y frontend para catalogo